corrected layout issues

--- a/src/containers/top40/top40Style.scss
+++ b/src/containers/top40/top40Style.scss
@@ -1,6 +1,9 @@
 @import "../../App.scss";
 
 .top-40-outer {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
   .top-40-text {
     color: $altText;
     text-align: center;
@@ -40,19 +43,20 @@
     display: grid;
     margin-left: auto;
     margin-right: auto;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(1,1fr);
     column-gap: 1rem;
     row-gap: 1rem;
     text-align: center;
-    width:90%;
-    padding: 0;
+    padding:0;
 
     .branded-item-wrap {
       border: 1px solid $boxBorder;
-      list-style:none;
+      list-style: none;
+
       .item-body {
         .item-image {
           width: 100%;
+
         }
         .item-name-wrap{
           display: block;
@@ -66,8 +70,10 @@
       }
 
       .vat-label {
-        margin-top: .5rem;
+        padding: 0;
+        margin-top: .5rem;;
         margin-bottom: 0;
+        font-family: "Open Sans",Arial,Helvetica,sans-serif;
       }
 
       .ex-vat-label {
@@ -76,6 +82,7 @@
         margin-top: 0;
         font-weight: lighter;
         color: $maintext;
+        font-family: "Open Sans",Arial,Helvetica,sans-serif;
       }
     }
 
@@ -84,12 +91,30 @@
     }
   }
 }
+
+@media screen and (min-width: 470px) {
+  .top-40-outer{
+    .branded-items-container{
+      grid-template-columns: repeat(2,1fr);
+
+    }
+  }
+}
+
+@media screen and (min-width: 690px) {
+  .top-40-outer{
+    .branded-items-container{
+      grid-template-columns: repeat(3,1fr);
+
+    }
+  }
+}
+
+
+
 @media screen and (min-width: 801px) {
   .top-40-outer {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
 
     .top-40-all {
       grid-template-columns: repeat(4,1fr);
